--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -12,7 +12,7 @@
                 <p>爱充科技有限公司自动化测试</p>
             </div>
             <div class="topbar-author">
-                <p>作者:曹靖</p>
+                <p>作者:范炎威</p>
             </div>
         </div>
     </div>
